Updated user endpoints to include update and update password routes
- updated swagger yaml to include new routes
